--- a/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
+++ b/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
@@ -84,7 +84,7 @@
                         </Trigger>
 
                         <Trigger Property="IsSelected" Value="False">
-                            <Setter Property="Foreground" Value="{DynamicResource NotSelectedDialogueCardForeground}"/>
+                            <Setter Property="Foreground" Value="{DynamicResource SecondaryForeground}"/>
                         </Trigger>
                         
                         <MultiTrigger>
