--- a/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
+++ b/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="clr-namespace:Chat.MVVM.Views.AdditionalInfrastructure.Converters">
+                    xmlns:converters="clr-namespace:Chat.Styles.AdditionalInfrastructure.Converters">
 
     <Style x:Key="DialogueCardTemplate" TargetType="{x:Type ListViewItem}">
 
