--- a/Chat/Styles/EntryWindows/EntryWindowsMainColumnStyle.xaml
+++ b/Chat/Styles/EntryWindows/EntryWindowsMainColumnStyle.xaml
@@ -1,8 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:converters="clr-namespace:Chat.MVVM.Views.AdditionalInfrastructure.Converters" 
-                    xmlns:converterParameters="clr-namespace:Chat.MVVM.Views.AdditionalInfrastructure.Converters.ConverterParameters"
-                    xmlns:configs="clr-namespace:Chat.MVVM.Models.Instances.Configs">
+                    xmlns:converters="clr-namespace:Chat.Styles.AdditionalInfrastructure.Converters" 
+                    xmlns:converterParameters="clr-namespace:Chat.Styles.AdditionalInfrastructure.Converters.ConverterParameters">
 
     <Style x:Key="EntryWindowsMainColumnStyle" TargetType="{x:Type ColumnDefinition}">
 
