--- a/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
+++ b/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:emoji="clr-namespace:Emoji.Wpf;assembly=Emoji.Wpf"
                     xmlns:converters="clr-namespace:Chat.Styles.AdditionalInfrastructure.Converters">
 
     <Style x:Key="DialogueCardTemplate" TargetType="{x:Type ListViewItem}">
@@ -7,6 +8,7 @@
         <Style.Resources>
             <converters:MessageSendingTimeConverter x:Key="MessageSendingTimeConverter"/>
             <converters:BitStreamToBitmapImageConverter x:Key="BitmapImageConverter"/>
+            <converters:MessageTextConverter x:Key="MessageTextConverter"/>
         </Style.Resources>
         
         <Setter Property="Template">
@@ -58,12 +60,20 @@
                                            Text="{Binding LastMessageInfo.SentAt, Converter={StaticResource MessageSendingTimeConverter}}"
                                            Foreground="{TemplateBinding Foreground}"/>
 
-                                
-                                <TextBlock Grid.Row="1" 
+
+                                <emoji:TextBlock Grid.Row="1" 
                                            FontSize="14"
-                                           Text="{Binding LastMessageInfo.Text}" 
                                            Foreground="{TemplateBinding Foreground}"
-                                           TextTrimming="CharacterEllipsis"/>
+                                           TextTrimming="CharacterEllipsis">
+
+                                    <emoji:TextBlock.Text>
+                                        <MultiBinding Converter="{StaticResource MessageTextConverter}">
+                                            <Binding Path="LastMessageInfo.Text"/>
+                                            <Binding Path="LastMessageInfo.HasFiles"/>
+                                        </MultiBinding>
+                                    </emoji:TextBlock.Text>
+                                    
+                                </emoji:TextBlock>
 
                             </Grid>
 
