--- a/Chat/MVVM/Views/ChatView.xaml
+++ b/Chat/MVVM/Views/ChatView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:Chat.MVVM.Views"
              xmlns:userControls="clr-namespace:Chat.MVVM.Views.UserControls"
              xmlns:viewModels="clr-namespace:Chat.MVVM.ViewModels"
+             xmlns:behaviors="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:ChatViewModel}">
@@ -21,10 +22,19 @@
         <Grid Grid.Column="0"
               Background="{DynamicResource SecondaryBackground}">
 
-            <ListView ItemsSource="{Binding DialoguesCards}" 
+            <ListView BorderThickness="0" 
+                      Background="Transparent" 
                       ItemContainerStyle="{StaticResource DialogueCardTemplate}"
-                      BorderThickness="0"
-                      Background="Transparent"/>
+                      ItemsSource="{Binding DialoguesCards}" 
+                      SelectedItem="{Binding SelectedDialogue}">
+
+                <behaviors:Interaction.Triggers>
+                    <behaviors:EventTrigger EventName="SelectionChanged">
+                        <behaviors:InvokeCommandAction Command="{Binding UploadMessagesCommand}"/>
+                    </behaviors:EventTrigger>
+                </behaviors:Interaction.Triggers>
+                
+            </ListView>
 
         </Grid>
 
