--- a/Chat/MVVM/Views/ChatView.xaml
+++ b/Chat/MVVM/Views/ChatView.xaml
@@ -11,14 +11,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance viewModels:ChatViewModel}">
-
+    
     
     <Grid>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="0.3*" MinWidth="240"/>
             <ColumnDefinition Width="3"/>
-            <ColumnDefinition Width="0.7*" MinWidth="400"/>
+            <ColumnDefinition Width="0.7*" MinWidth="300"/>
         </Grid.ColumnDefinitions>
 
         <Grid Grid.Column="0"
@@ -26,7 +26,8 @@
 
             <ListView BorderThickness="0" 
                       Background="Transparent" 
-                      ItemContainerStyle="{StaticResource DialogueCardTemplate}"
+                      ItemContainerStyle="{StaticResource DialogueCardTemplate}" 
+                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       ItemsSource="{Binding DialoguesCards}" 
                       SelectedItem="{Binding SelectedDialogue}">
 
@@ -69,6 +70,7 @@
 
                 <ListView BorderThickness="0" 
                           Background="Transparent" 
+                          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                           ItemsSource="{Binding Messages}" 
                           VerticalAlignment="Bottom">
 
@@ -83,26 +85,24 @@
                             <Setter Property="BorderThickness" Value="0"/>
                             <Setter Property="DockPanel.Dock" Value="Bottom"/>
 
+                            <Setter Property="Width" Value="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=ListView}}"/>
+
                             <Setter Property="Template">
                                 
                                 <Setter.Value>
-                                    
+
                                     <ControlTemplate TargetType="{x:Type ListViewItem}">
 
-                                        <Grid Background="Transparent" 
-                                              MaxWidth="600" 
-                                              HorizontalAlignment="Left" 
-                                              Margin="4,0,0,8">
-                                            
-                                            
-                                            <userControls:FilledRoundedBorder Roundation="10">
-                                                
-                                                <userControls:FilledRoundedBorder.Style>
-                                                    
-                                                    <Style TargetType="{x:Type userControls:FilledRoundedBorder}">
-                                                        
+                                        <Grid>
+
+                                            <userControls:MessageControl Text="{Binding Text}"
+                                                                         HorizontalAlignment="Left"
+                                                                         Margin="4,0,0,8">
+
+                                                <userControls:MessageControl.Style>
+                                                    <Style TargetType="{x:Type userControls:MessageControl}">
                                                         <Style.Triggers>
-                                                            
+
                                                             <DataTrigger Binding="{Binding Path=DataContext.UserId, RelativeSource={RelativeSource AncestorType=Grid}, Converter={StaticResource IsMyMessageConverter}}" Value="true">
                                                                 <Setter Property="Background" Value="{DynamicResource MyMessageBackground}"/>
                                                             </DataTrigger>
@@ -110,20 +110,12 @@
                                                             <DataTrigger Binding="{Binding Path=DataContext.UserId, RelativeSource={RelativeSource AncestorType=Grid}, Converter={StaticResource IsMyMessageConverter}}" Value="false">
                                                                 <Setter Property="Background" Value="{DynamicResource NotMyMessageBackground}"/>
                                                             </DataTrigger>
-                                                            
-                                                        </Style.Triggers>
-                                                        
-                                                    </Style>
-                                                    
-                                                </userControls:FilledRoundedBorder.Style>
-                                                
-                                            </userControls:FilledRoundedBorder>
 
-                                            
-                                            <TextBlock Padding="10" 
-                                                       Text="{Binding Text}" 
-                                                       Foreground="{DynamicResource MainForeground}" 
-                                                       FontSize="16"/>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </userControls:MessageControl.Style>
+
+                                            </userControls:MessageControl>
 
                                         </Grid>
 
