temp.9.12. DialoguesNames are highlighted

--- a/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
+++ b/Chat/Styles/ControlTemplates/DialogueCardTemplate.xaml
@@ -51,7 +51,8 @@
                                 
                                 <TextBlock FontSize="16" 
                                            Foreground="{DynamicResource MainForeground}"
-                                           Text="{Binding DialogueName}" />
+                                           Text="{Binding DialogueName}" 
+                                           FontWeight="Medium"/>
 
                                 
                                 <TextBlock HorizontalAlignment="Right"
