temp.9.13. addition of Time in MessageControl

--- a/Chat/MVVM/Views/ChatView.xaml
+++ b/Chat/MVVM/Views/ChatView.xaml
@@ -76,6 +76,7 @@
 
                     <ListView.Resources>
                         <converters:IsMyMessageConverter x:Key="IsMyMessageConverter"/>
+                        <converters:DateTimeToTimeConverter x:Key="DateTimeToTimeConverter"/>
                     </ListView.Resources>
 
                     <ListView.ItemContainerStyle>
@@ -96,6 +97,7 @@
                                         <Grid>
 
                                             <userControls:MessageControl Text="{Binding Text}"
+                                                                         Time="{Binding SentAt, Converter={StaticResource DateTimeToTimeConverter}}"
                                                                          HorizontalAlignment="Left"
                                                                          Margin="4,0,0,8">
 
