temp.9.16. addition of MessageControlAsListViewItemStyle

--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -33,6 +33,7 @@
                 <ResourceDictionary Source="Styles/TitleBarButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/CustomMessageBoxButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/NonDefaultWindowStyle.xaml" />
+                <ResourceDictionary Source="Styles/MessageControlAsListViewItemStyle.xaml" />
                 
                 <!--Global styles-->
                 <ResourceDictionary Source="Styles/LogotypeStyle.xaml" />
