--- a/Chat/App.xaml
+++ b/Chat/App.xaml
@@ -34,6 +34,7 @@
                 <ResourceDictionary Source="Styles/CustomMessageBoxButtonStyle.xaml" />
                 <ResourceDictionary Source="Styles/NonDefaultWindowStyle.xaml" />
                 <ResourceDictionary Source="Styles/MessageControlAsListViewItemStyle.xaml" />
+                <ResourceDictionary Source="Styles/CustomListViewStyle.xaml" />
                 
                 <!--Global styles-->
                 <ResourceDictionary Source="Styles/LogotypeStyle.xaml" />
